# minioc

./: Cargo.toml  README.md  build.rs  downloaded_file.txt  test_file.txt
src/: main.rs  minioc_service.rs
src/utils/: handle_download.rs  handle_upload.rs  mod.rs  upload_to_s3.rs
test/: download_file.sh  stream_upload.sh
