[package]
name = "minioc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.30"
futures-util = "0.3.30"
prost = "0.13.2"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = { version = "1.39.3", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.12.2"
tonic-reflection = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
messengerc = { git = "https://github.com/bennekrouf/messengerc.git" }

[build-dependencies]
tonic-build = "0.12.2"
